<resources>
    <string name="company_name">ShareButtons</string>
    <string name="name">Clicky Dashboard for Android</string>
    <string name="clicky_panel">Clicky Panel</string>
    <string name="app_name">Clicky Analytics</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_users_online">Users Online</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="user_name">User Name</string>
    <string name="login_label">Login</string>
    <string name="websites_label">Select Website</string>
    <string name="logout_label">Logout</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_text_message">Something went wrong. Please try again</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="refresh_label">Refresh</string>
    <string name="user_online_label">User Online</string>
    <string name="nothing_label">--</string>
    <string name="label_visitors">Visitors</string>
    <string name="label_visitors_new">Visitors New</string>
    <string name="label_visitors_unique">Visitors Unique</string>
    <string name="label_actions">Actions</string>
    <string name="label_avg_actions">Average Actions</string>
    <string name="label_actions_page_views">Actions PageViews</string>
    <string name="label_actions_download">Actions Downloads</string>
    <string name="label_actions_outbound_links">Actions Outbound links</string>
    <string name="label_actions_events">Actions Events</string>
    <string name="label_total_time">Total Time</string>
    <string name="label_avg_time_p_v">Average Time Per/Visit</string>
    <string name="label_bounce_rate">Bounce Rate</string>
    <string name="username_label">User Name</string>
    <string name="password_label">Password</string>
    <string name="h4h13_incs_label">ShareButtons</string>
    <string name="username_password_empty">Username or Password is empty!</string>
    <string name="select_website_label">Select a Website</string>
    <string name="person_name">Person Name</string>
    <string name="title_activity_show_list">ShowListActivity</string>
    <string name="website_label">Website Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nothing_to_display_label">Nothing to display</string>
    <string name="title_activity_toolbar">Toolbar</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="notific_count">--</string>
    <string name="nav_list_icon_desc">Navigation List Icon</string>
    <string name="about_label">About</string>
    <string name="rate_label">Rate this App</string>
    <string name="share_label">Share</string>
    <string name="email_label">Email</string>
    <string name="message_label">Message</string>
    <string name="contact_label">Contact us</string>
    <string name="email_send_error_label">There are no email client installed</string>
    <string name="select_app_label">Select an Application…</string>
    <string name="my_email">hemanths@live.com</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=</string>
    <string name="set_visitors">_SET_VISITORS</string>
    <string name="set_visitors_new">_SET_VISITORS_NEW</string>
    <string name="set_visitors_unique">_SET_VISITORS_UNIQUE</string>
    <string name="set_actions">_SET_ACTIONS</string>
    <string name="set_actions_page_view">_SET_ACTIONS_PAGE_VIEW</string>
    <string name="set_actions_download">_SET_ACTIONS_DOWNLOAD</string>
    <string name="set_actions_outbound_links">_SET_ACTIONS_OUTBOUND_LINKS</string>
    <string name="set_actions_events">_SET_ACTIONS_EVENTS</string>
    <string name="set_actions_avg">_SET_ACTIONS_AVG</string>
    <string name="set_actions_avg_paer_visit">_SET_ACTIONS_AVG_PER_VISIT</string>
    <string name="set_total_time">_SET_TOTAL_TIME</string>
    <string name="set_bounce_rate">_SET_BOUNCE_RATE</string>

    <string name="title_activity_content">Content</string>
    <string name="title_activity_links">Links</string>
    <string name="title_activity_navigation_list">NavigationList</string>
    <string name="title_activity_common_nav">CommonNav</string>
    <string name="title_activity_">Act</string>
    <string name="title_activity_ext">ext</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_ad_website">Add a website</string>
    <string name="add_website">Add Website</string>

    <string name="label_today">Today</string>
    <string name="label_the_basics">The Basics</string>
    <string name="label_cat">Category</string>
    <string name="label_content">Content</string>
    <string name="label_links">Links</string>
    <string name="label_searches">Searches</string>
    <string name="label_locale">Locale</string>
    <string name="label_platforms">Platforms</string>
    <string name="label_eng">Engagement</string>
    <string name="label_others">Others</string>
    <string name="label_about">About</string>
    <string name="label_donate">Donate</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="label_donate_underline"><u>Donate</u></string>
    <string name="title_activity_show_error">Error</string>
    <string name="splash_title">Real Time Web Analytics</string>

    <string name="title_activity_settings">HMm</string>
    <string name="action_exit">Exit</string>
</resources>
