<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_frame"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <include
                android:id="@+id/app_bar"
                layout="@layout/app_bar"/>

            <LinearLayout
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/VerticalLinerLayout"
                    android:background="@color/md_red_500">

                    <TextView
                        android:id="@+id/tvVisitor"
                        style="@style/TextViewStyleCount"/>

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/label_visitors"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/VerticalLinerLayout"
                    android:background="@color/md_pink_500">

                    <TextView
                        android:id="@+id/tvVisitorNew"
                        style="@style/TextViewStyleCount"/>

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/label_visitors_new"/>

                </LinearLayout>


                <LinearLayout
                    style="@style/VerticalLinerLayout"
                    android:background="@color/md_purple_500">

                    <TextView
                        android:id="@+id/tvUniqueVisitors"
                        style="@style/TextViewStyleCount"/>

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/label_visitors_unique"/>
                </LinearLayout>


                <LinearLayout
                    style="@style/VerticalLinerLayout"
                    android:background="@color/md_deep_purple_500">

                    <TextView
                        android:id="@+id/tvActions"
                        style="@style/TextViewStyleCount"/>

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/label_actions"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/VerticalLinerLayout"
                    android:background="@color/md_indigo_500">


                    <TextView
                        android:id="@+id/tvAvgActions"
                        style="@style/TextViewStyleCount"/>

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/label_avg_actions"/>
                </LinearLayout>


                <LinearLayout
                    style="@style/VerticalLinerLayout"
                    android:background="@color/md_blue_500">


                    <TextView
                        android:id="@+id/tvActionsPageViews"
                        style="@style/TextViewStyleCount"/>

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/label_actions_page_views"/>
                </LinearLayout>


                <LinearLayout
                    style="@style/VerticalLinerLayout"
                    android:background="@color/md_light_blue_500">


                    <TextView
                        android:id="@+id/tvActionsDownload"
                        style="@style/TextViewStyleCount"/>

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/label_actions_download"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/VerticalLinerLayout"
                    android:background="@color/md_cyan_500">

                    <TextView
                        android:id="@+id/tvActionsOutboundLinks"
                        style="@style/TextViewStyleCount"/>

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/label_actions_outbound_links"/>


                </LinearLayout>

                <LinearLayout
                    style="@style/VerticalLinerLayout"
                    android:background="@color/md_teal_500">

                    <TextView
                        android:id="@+id/tvActionsEvent"
                        style="@style/TextViewStyleCount"/>

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/label_actions_events"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/VerticalLinerLayout"
                    android:background="@color/md_green_500">

                    <TextView
                        android:id="@+id/tvTotalTime"
                        style="@style/TextViewStyleCount"/>

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/label_total_time"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/VerticalLinerLayout"
                    android:background="@color/md_orange_500">

                    <TextView
                        android:id="@+id/tvAvgTimePerVisit"
                        style="@style/TextViewStyleCount"/>

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/label_avg_time_p_v"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/VerticalLinerLayout"
                    android:background="@color/md_deep_orange_500">

                    <TextView
                        android:id="@+id/tvBounceRate"
                        style="@style/TextViewStyleCount"/>

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/label_bounce_rate"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>